--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "docs": "typedoc --options typedoc.js src",
     "prepack": "npm run build",
     "install:nextjs": "npm i --prefix=examples/nextjs --no-package-lock",
-    "install:examples": "npm run install:nextjs",
+    "install:remix": "npm i --prefix=examples/remix --no-package-lock",
+    "install:examples": "npm run install:nextjs && npm run install:remix",
     "build": "npm run clean && tsc -p tsconfig.build.json",
     "build:nextjs": "npm run build --prefix=examples/nextjs",
-    "build:examples": "npm run build:nextjs",
-    "dev:nextjs": "npm run dev --prefix=examples/nextjs"
+    "build:remix": "npm run build --prefix=examples/remix",
+    "build:examples": "npm run build:nextjs && npm run build:remix",
+    "dev:nextjs": "npm run dev --prefix=examples/nextjs",
+    "dev:remix": "npm run dev --prefix=examples/remix"
   },
   "repository": {
     "type": "git",
@@ -49,6 +52,9 @@
   },
   "homepage": "https://github.com/supabase-community/supabase-auth-helpers#readme",
   "devDependencies": {
+    "@remix-run/dev": "^1.1.3",
+    "@remix-run/react": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
@@ -63,6 +69,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "remix": "^1.1.3",
     "rimraf": "^3.0.2",
     "semantic-release": "^19.0.2",
     "semantic-release-plugin-update-version-in-files": "^1.1.0",
@@ -75,6 +82,7 @@
     "tslib": "^2.3.1"
   },
   "peerDependencies": {
-    "next": ">=10"
+    "next": ">=10",
+    "remix": "^1.1.3"
   }
 }
