Initial change of multiple stores to session store

--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -47,6 +47,7 @@
     },
     "dependencies": {
         "@supabase/auth-helpers-shared": "workspace:*",
-        "@supabase/supabase-js": "^1.35.3"
+        "@supabase/supabase-js": "^1.35.3",
+        "dequal": "^2.0.2"
     }
 }
