--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   "homepage": "https://github.com/supabase/auth-helpers/tree/main/packages/nextjs#readme",
   "devDependencies": {
     "@supabase/supabase-js": "^1.35.3",
-    "config": "0.1.0",
+    "@supabase/auth-helpers-config": "0.1.0",
     "next": "^12.2.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
-    "tsconfig": "0.1.0",
+    "@supabase/auth-helpers-tsconfig": "0.1.0",
     "tslib": "^2.3.1",
     "tsup": "^5.12.5"
   },
